# bayard

./: .gitignore  AUTHORS  Bayard_Indivisual_CLA.md  CHANGES.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  bayard-cli.dockerfile  bayard-rest.dockerfile  bayard.dockerfile  book.toml  docker-compose.yml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: CI.yml  periodic.yml  regression.yml  release.yml
bayard/: Cargo.toml  README.md  build.rs
bayard-cli/: Cargo.toml
bayard-cli/src/: lib.rs  main.rs
bayard-cli/src/cli/: bulk_delete.rs  bulk_set.rs  command.rs  commit.rs  delete.rs  get.rs  leave.rs  merge.rs  metrics.rs  mod.rs  rollback.rs  root.rs  schema.rs  search.rs  set.rs  status.rs  subcommand.rs
bayard-client/: Cargo.toml
bayard-client/src/: lib.rs
bayard-client/src/index/: client.rs
bayard-client/src/raft/: client.rs
bayard-common/: Cargo.toml  README.md
bayard-common/src/: lib.rs
bayard-common/src/signal/: mod.rs
bayard-rest/: Cargo.toml
bayard-rest/src/: lib.rs  main.rs
bayard-rest/src/cli/: mod.rs  root.rs  start.rs
bayard-rest/src/handler/: bulk_delete.rs  bulk_set.rs  commit.rs  delete.rs  get.rs  merge.rs  metrics.rs  mod.rs  rollback.rs  schema.rs  search.rs  set.rs  status.rs
bayard-rest/src/log/: mod.rs
bayard-rest/src/rest/: handler.rs  mod.rs  server.rs
bayard-server/: Cargo.toml
bayard-server/src/: lib.rs
bayard-server/src/index/: mod.rs  search_result.rs  server.rs
bayard-server/src/metric/: handler.rs  server.rs
bayard-server/src/raft/: config.rs  server.rs
bayard-server/src/tokenizer/: alpha_num_only_filter_factory.rs  cang_jie_tokenizer_factory.rs  facet_tokenizer_factory.rs  raw_tokenizer_factory.rs  stemming_filter_factory.rs  stop_word_filter_factory.rs  tokenizer_initializer.rs
bayard/proto/: cluster.proto  healthcheck.proto  index.proto
bayard/src/: client.rs  cluster.rs  common.rs  handler.rs  index.rs  lib.rs  main.rs  node.rs  proto.rs  rendezvous.rs  server.rs  service.rs  signal.rs
bayard/src/cli/: bulk_delete.rs  bulk_set.rs  commit.rs  delete.rs  get.rs  leave.rs  merge.rs  metrics.rs  mod.rs  rollback.rs  root.rs  schema.rs  search.rs  set.rs  start.rs  status.rs
bayard/src/cluster/: broadcast.rs  member.rs  members.rs  membership.rs  message.rs  metadata.rs  runtime.rs
bayard/src/handler/: cluster.rs  healthcheck.rs  index.rs
bayard/src/index/: analyzer.rs  metadata.rs  metastore.rs  shard.rs  shards.rs  token_filter.rs  tokenizer.rs
bayard/src/index/token_filter/: alpha_num_only.rs  ascii_folding.rs  lower_case.rs  remove_long.rs  stemming.rs  stop_word.rs
bayard/src/index/tokenizer/: lindera.rs  ngram.rs  raw.rs  simple.rs  whitespace.rs
bayard/src/node/: index.rs  search.rs
bayard/src/proto/: cluster.rs  common.rs  healthcheck.rs  index.rs
bayard/src/rendezvous/: LICENSE  README.md  hash.rs  node.rs
bayard/src/search/: query.rs
bayard/src/search/query/: all.rs  boolean.rs  boost.rs  fuzzy_term.rs  phrase.rs  query_string.rs  range.rs  regex.rs  term.rs
bayard/src/service/: cluster.rs  healthcheck.rs  index.rs
docs/: 404.html  accessing_over_http.html  analyzers.md  bayard-architecture.excalidraw  build.md  building_bayard.html  cluster_mode.html  conf.py  configure_text_analyzers.html  designing_schema.html  getting_started.html  getting_started.md  index.html  index.rst  install.html  multi_node_cluster.md  overview.html  pre_configured_tokenizers.html  print.html  query_dsl.md  reference.html  rest_api.md  running_on_docker.html  scheduling_jobs.html  schema.md  searchindex.js  searchindex.json
docs/_build/doctrees/: environment.pickle  index.doctree
docs/reference/: api.html  apis.html  bayard.html  cli.html
docs/reference/api/: bulk-delete.html  bulk-set.html  commit.html  delete.html  get.html  merge.html  metrics.html  rollback.html  schema.html  search.html  set.html  status.html
docs/reference/apis/: commit.html  delete.html  get.html  merge.html  metrics.html  peers.html  probe.html  put.html  rollback.html  schema.html  search.html
docs/reference/bayard/: commit.html  gateway.html  get.html  leave.html  merge.html  metrics.html  peers.html  probe.html  put.html  rollback.html  schema.html  (+3 more)
docs/rest_api/: cluster_nodes_api.md  commit_api.md  create_index_api.md  decrement_shards.md  delete_documents_api.md  delete_index_api.md  get_index_api.md  health_check_api.md  increment_shards.md  modify_index_api.md  put_documents_api.md  rollback_api.md  search_api.md
docs_src/: SUMMARY.md  accessing_over_http.md  building_bayard.md  cluster_mode.md  configure_text_analyzers.md  designing_schema.md  getting_started.md  install.md  pre_configured_tokenizers.md  reference.md  running_on_docker.md  scheduling_jobs.md
docs_src/reference/: api.md  apis.md  bayard.md  cli.md
etc/: schema.json  schema_ja.json  schema_tr.json  tokenizer.json
examples/: all_query.json  analyzers.json  boolean_query.json  boost_query.json  bulk_delete.jsonl  bulk_put.jsonl  cert.pem  doc_1.json  doc_ids.jsonl  doc_ja.json  doc_tr.json  docs.jsonl  fuzzy_term_query.json  meta.json  phrase_query.json  query_string_query.json  range_query.json  regex_query.json  term_query.json
proto/: eraftpb.proto  indexpb.proto  indexrpcpb.proto
src/: cmd.rs  lib.rs  main.rs  server.rs  tokenizer.rs  util.rs
src/client/: client.rs
src/cmd/: commit.rs  delete.rs  gateway.rs  get.rs  leave.rs  merge.rs  metrics.rs  peers.rs  probe.rs  put.rs  rollback.rs  schedule.rs  schema.rs  search.rs  serve.rs  set.rs  status.rs
src/proto/: indexpb.rs  indexpb_grpc.rs  indexrpcpb.rs
src/server/: metrics.rs  peer.rs  server.rs  util.rs
src/tokenizer/: alpha_num_only_filter_factory.rs  ascii_folding_filter_factory.rs  cang_jie_tokenizer_factory.rs  facet_tokenizer_factory.rs  lindera_tokenizer_factory.rs  lower_case_filter_factory.rs  ngram_tokenizer_factory.rs  raw_tokenizer_factory.rs  remove_long_filter_factory.rs  simple_tokenizer_factory.rs  stemming_filter_factory.rs  stop_word_filter_factory.rs  tokenizer_initializer.rs
src/util/: log.rs  search_result.rs  signal.rs
(+98 files in other folders)
