[package]
name = "bayard"
version = "0.1.0"
authors = ["Minoru Osuka <minoru.osuka@gmail.com>"]
edition = "2018"

[lib]
name = "bayard"

[[bin]]
name = "bayard"
path = "src/main.rs"

[dependencies]
clap = "2.33.0"
env_logger = "0.7.0"
futures = "0.1.29"
grpcio = { version = "0.4.5", features = [ "secure" ] }
log = "0.4.8"
protobuf = "2.8.0"
raft = "0.4.3"
rand = "0.7.2"
serde_json = "1.0.40"
tantivy = "0.10.2"
