[package]
name = "bayard"
version = "0.2.0"
authors = ["Minoru Osuka <minoru.osuka@gmail.com>"]
edition = "2018"
description = "Bayard is a full-text search and indexing server written in Rust."
documentation = "https://bayard-search.github.io/bayard/"
homepage = "https://github.com/bayard-search/bayard"
repository = "https://github.com/bayard-search/bayard"
readme = "README.md"
keywords = ["search", "index", "server", "information", "retrieval"]
categories = ["database"]
license = "MIT"

[lib]
name = "bayard"

[[bin]]
name = "bayard"
path = "src/main.rs"

[dependencies]
clap = "2.33.0"
crossbeam-channel = "0.3.9"
ctrlc = { version = "3.1.3", features = ["termination"] }
env_logger = "0.7.0"
futures = "0.1.29"
grpcio = { version = "0.4.5", features = [ "secure" ] }
iron = "0.6.1"
job_scheduler = "1.1.0"
log = "0.4.8"
logger = "0.4.0"
persistent = "0.4.0"
prometheus = "0.7.0"
protobuf = "2.8.0"
raft = "0.4.3"
rand = "0.7.2"
router = "0.6.0"
serde_json = "1.0.40"
tantivy = "0.10.3"
urlencoded = "0.6.0"
