[package]
name = "bayard"
version = "0.5.0"
authors = ["Minoru Osuka <minoru.osuka@gmail.com>"]
edition = "2018"
description = "Bayard is a full-text search and indexing server written in Rust."
documentation = "https://bayard-search.github.io/bayard/"
homepage = "https://github.com/bayard-search/bayard"
repository = "https://github.com/bayard-search/bayard"
readme = "README.md"
keywords = ["search", "index", "server", "information", "retrieval"]
categories = ["database"]
license = "MIT"
exclude = ["docs", "docs_src", "etc"]

[lib]
name = "bayard"

[[bin]]
name = "bayard"
path = "src/main.rs"

[dependencies]
async-std = "1.4.0"
cang-jie = "0.7.0"
clap = "2.33.0"
crossbeam-channel = "0.4.0"
ctrlc = { version = "3.1.3", features = ["termination"] }
env_logger = "0.7.1"
futures = "0.1.29"
grpcio = { version = "0.4.7", features = [ "secure" ] }
iron = "0.6.1"
jieba-rs = "0.4.10"
job_scheduler = "1.1.0"
log = "0.4.8"
logger = "0.4.0"
num_cpus = "1.11.1"
persistent = "0.4.0"
prometheus = "0.7.0"
protobuf = "2.8.0"
raft = "0.4.3"
rand = "0.7.2"
router = "0.6.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
stringreader = "0.1.1"
tantivy = "0.12.0"
urlencoded = "0.6.0"
