[package]
name = "bayard-cli"
version = "0.8.2"
authors = ["Minoru Osuka <minoru.osuka@gmail.com>"]
edition = "2018"
description = "Command line interface for Bayard."
documentation = "https://bayard-search.github.io/bayard/"
homepage = "https://github.com/bayard-search"
repository = "https://github.com/bayard-search/bayard/bayard-cli"
readme = "README.md"
keywords = ["full-text", "search", "index", "cli"]
categories = ["database"]
license = "MIT"

[[bin]]
name = "bayard-cli"
path = "src/main.rs"

[dependencies]
clap = "2.33.3"
serde_json = "1.0.57"

bayard-client = { version = "0.8.1", path = "../bayard-client" }
bayard-common = { version = "0.8.1", path = "../bayard-common" }
