[package]
name = "bayard-client"
version = "0.7.0"
authors = ["Minoru Osuka <minoru.osuka@gmail.com>"]
edition = "2018"
description = "Client library for Bayard."
documentation = "https://bayard-search.github.io/bayard/"
homepage = "https://github.com/bayard-search"
repository = "https://github.com/bayard-search/bayard/bayard-client"
readme = "README.md"
keywords = ["full-text", "search", "index", "client"]
categories = ["database"]
license = "MIT"

[dependencies]
bincode = "1.2.1"
grpcio = { version = "0.4.7", features = [ "secure" ] }
log = "0.4.8"
protobuf = "2.14.0"
raft = "0.4.3"
rand = "0.7.2"
serde_json = "1.0.44"

bayard-proto = "0.7.0"
bayard-server = { version = "0.7.0", path = "../bayard-server" }
