[package]
name = "bayard-client"
version = "0.8.1"
authors = ["Minoru Osuka <minoru.osuka@gmail.com>"]
edition = "2018"
description = "Client library for Bayard."
documentation = "https://bayard-search.github.io/bayard/"
homepage = "https://github.com/bayard-search"
repository = "https://github.com/bayard-search/bayard/bayard-client"
readme = "README.md"
keywords = ["full-text", "search", "index", "client"]
categories = ["database"]
license = "MIT"

[dependencies]
bincode = "1.3.1"
grpcio = { version = "0.4.7", features = [ "secure" ] }
log = "0.4.11"
protobuf = "2.14.0"
raft = "0.4.3"
rand = "0.7.3"
serde_json = "1.0.57"

bayard-proto = "0.8.0"

bayard-server = { version = "0.8.1", path = "../bayard-server" }
