[package]
name = "bayard-rest"
version = "0.8.1"
authors = ["Minoru Osuka <minoru.osuka@gmail.com>"]
edition = "2018"
description = "REST API server for Bayard."
documentation = "https://bayard-search.github.io/bayard/"
homepage = "https://github.com/bayard-search"
repository = "https://github.com/bayard-search/bayard/bayard-rest"
readme = "README.md"
keywords = ["full-text", "search", "index", "server", "rest"]
categories = ["database"]
license = "MIT"

[[bin]]
name = "bayard-rest"
path = "src/main.rs"

[dependencies]
clap = "2.33.0"
crossbeam-channel = "0.4.2"
ctrlc = { version = "3.1.4", features = ["termination"] }
futures-util = "0.3.5"
hyper = "0.13.5"
lazy_static = "1.4.0"
log = "0.4.8"
regex = "1.3.7"
rustls = "0.17.0"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.51"
serde_qs = "0.5.2"
tokio = { version = "0.2.21", features = ["full"] }
tokio-rustls = "0.13.0"

bayard-client = { version = "0.8.1", path = "../bayard-client" }
bayard-common = { version = "0.8.1", path = "../bayard-common" }
