[package]
name = "bayard-rest"
version = "0.8.4"
authors = ["Minoru Osuka <minoru.osuka@gmail.com>"]
edition = "2018"
description = "REST API server for Bayard."
documentation = "https://bayard-search.github.io/bayard/"
homepage = "https://github.com/bayard-search"
repository = "https://github.com/bayard-search/bayard/bayard-rest"
readme = "README.md"
keywords = ["full-text", "search", "index", "server", "rest"]
categories = ["database"]
license = "MIT"

[[bin]]
name = "bayard-rest"
path = "src/main.rs"

[dependencies]
actix = "0.9"
actix-cors = "0.2"
actix-rt = "1.1"
actix-server = "1.0"
actix-web = { version = "2.0", features = ["rustls"] }
clap = "2.33"
crossbeam-channel = "0.4"
ctrlc = { version = "3.1", features = ["termination"] }
log = "0.4"
num_cpus = "1.13"
rustls = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.6"

bayard-client = { version = "0.8", path = "../bayard-client" }
bayard-common = { version = "0.8", path = "../bayard-common" }
