[package]
name = "bayard-server"
version = "0.8.1"
authors = ["MinoruOsuka <minoru.osuka@gmail.com>"]
edition = "2018"
description = "Bayard is a distributed search server."
documentation = "https://bayard-search.github.io/bayard/"
homepage = "https://github.com/bayard-search"
repository = "https://github.com/bayard-search/bayard/bayard-server"
readme = "README.md"
keywords = ["full-text", "search", "index", "server"]
categories = ["database"]
license = "MIT"

[dependencies]
async-std = "1.5.0"
bincode = "1.2.1"
cang-jie = "0.8.0"
futures = "0.1.29"
grpcio = { version = "0.4.7", features = [ "secure" ] }
hyper = "0.13.5"
jieba-rs = "0.5.0"
lazy_static = "1.4.0"
lindera-tantivy = "0.1.1"
log = "0.4.8"
prometheus = "0.8.0"
protobuf = "2.14.0"
raft = "0.4.3"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.51"
stringreader = "0.1.1"
tantivy = "0.12.0"

bayard-proto = "0.8.0"
