[package]
name = "bayard-server"
version = "0.8.1"
authors = ["MinoruOsuka <minoru.osuka@gmail.com>"]
edition = "2018"
description = "Bayard is a distributed search server."
documentation = "https://bayard-search.github.io/bayard/"
homepage = "https://github.com/bayard-search"
repository = "https://github.com/bayard-search/bayard/bayard-server"
readme = "README.md"
keywords = ["full-text", "search", "index", "server"]
categories = ["database"]
license = "MIT"

[dependencies]
async-std = "1.6.3"
bincode = "1.3.1"
cang-jie = "0.10.0"
futures = "0.1.29"
grpcio = { version = "0.4.7", features = [ "secure" ] }
hyper = "0.13.7"
jieba-rs = "0.6.0"
lazy_static = "1.4.0"
lindera-tantivy = "0.2.0"
log = "0.4.11"
prometheus = "0.9.0"
protobuf = "2.17.0"
raft = "0.4.3"
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
stringreader = "0.1.1"
tantivy = "0.13.0"

bayard-proto = "0.8.1"
