[package]
name = "bayard-server"
version = "0.8.5"
authors = ["MinoruOsuka <minoru.osuka@gmail.com>"]
edition = "2018"
description = "Bayard is a distributed search server."
documentation = "https://bayard-search.github.io/bayard/"
homepage = "https://github.com/bayard-search"
repository = "https://github.com/bayard-search/bayard/bayard-server"
readme = "README.md"
keywords = ["full-text", "search", "index", "server"]
categories = ["database"]
license = "MIT"

[dependencies]
async-std = "1.6"
bincode = "1.3"
cang-jie = "0.11"
futures = "0.1"
grpcio = { version = "0.4", features = [ "secure" ] }
hyper = "0.13"
jieba-rs = "0.6"
lazy_static = "1.4"
lindera-tantivy = "0.7.2"
log = "0.4"
prometheus = "0.9"
protobuf = "2.17"
raft = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
stringreader = "0.1"
tantivy = "0.14"

bayard-proto = "0.8"
