[package]
name = "bayard"
version = "0.8.2"
authors = ["Minoru Osuka <minoru.osuka@gmail.com>"]
edition = "2018"
description = "A distributed search server."
documentation = "https://bayard-search.github.io/bayard/"
homepage = "https://github.com/bayard-search"
repository = "https://github.com/bayard-search/bayard/bayard"
readme = "README.md"
keywords = ["full-text", "search", "index", "server"]
categories = ["database"]
license = "MIT"

[[bin]]
name = "bayard"
path = "src/main.rs"

[dependencies]
clap = "2.33"
futures = "0.1"
grpcio = { version = "0.4", features = ["secure"] }
hyper = "0.13"
log = "0.4"
num_cpus = "1.13"
raft = "0.4"
serde_json = "1.0"
tokio = { version = "0.2", features = ["macros"] }

bayard-proto = "0.8"

bayard-client = { version = "0.8", path = "../bayard-client" }
bayard-common = { version = "0.8", path = "../bayard-common" }
bayard-server = { version = "0.8", path = "../bayard-server" }
