[package]
name = "bayard"
version = "0.9.0"
authors = ["Minoru Osuka <minoru.osuka@gmail.com>"]
edition = "2021"
description = "A distributed search server."
documentation = "https://bayard-search.github.io/bayard/"
homepage = "https://github.com/mosuka/bayard"
repository = "https://github.com/mosuka/bayard/bayard"
readme = "README.md"
keywords = ["full-text", "search", "index", "server"]
categories = ["database"]
license = "MIT"

[[bin]]
name = "bayard"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.65"
axum = "0.5.16"
bytes = { version = "1.2.1", features = ["serde"] }
clap = { version = "4.0.24", features = ["derive"] }
crossbeam = "0.8.2"
dashmap = { version = "5.4.0", features = ["serde"] }
exponential-backoff = "1.1.0"
foca = { version = "0.4.1", features = ["postcard-codec"] }
futures-util = "0.3.24"
http = "0.2.8"
lindera-tantivy = { version = "0.16.2", features = ["ipadic", "ko-dic", "cc-cedict"] }
notify = "5.0.0"
num = "0.4.0"
path-slash = "0.2.1"
prost = { version = "0.11.0", default-features = false, features = ["prost-derive"] }
rand = "0.8.5"
regex = "1.6.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
signal-hook = { version = "0.3.14", features = ["extended-siginfo"] }
tantivy = "0.18.0"
thiserror = "1.0.37"
time = { version = "0.3.15", features = ["std"] }
tokio = { version = "1.21.1", features = ["full"] }
tokio-stream = { version = "0.1.10", features = ["sync"] }
tonic = { version = "0.8.2", features = ["transport"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[dev-dependencies]
tempdir = "0.3.7"

[build-dependencies]
tonic-build = "0.8.2"
prost-build = "0.11.1"
